[package]
name = "parrot"
version = "0.1.0"
authors = ["lightclient@protonmail.com <lightclient@protonmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
syslog_loose = "0.14"
teloxide-core = { version = "0.3", features = ["auto_send"] }
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
